fix iframe background color in dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -187,6 +187,10 @@ article {
   }
 }
 
+iframe {
+  color-scheme: light dark;
+}
+
 .fw-inherit a {
   font-weight: inherit;
 }
